--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
          url('fonts/capture_it-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 
 * {
@@ -13,10 +12,84 @@
     box-sizing: border-box;
 }
 
-h1 {
-    font-family: 'capture_itregular', sans-serif;
-    margin: 20px;
-    font-size: 10em;
-    letter-spacing: 0.1em;
+
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+    line-height: 1.6;
+    display: flex;
+    height: 100vh;
 }
 
+aside {
+    flex: 1 1 20%;
+    background-image: url("images/background-image.jpg");
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: #f4f4f4;
+    padding-bottom: 1rem;
+}
+
+.logo-container {
+    margin-top: 20vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    color: #fff;
+}
+
+.logo-container img {
+    width: 80px;
+    height: 80px;
+}
+
+aside p.credit {
+    text-align: center;
+}
+
+aside p.credit a {
+    color: #f4f4f4;
+}
+
+main {
+    flex: 10;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: top;
+}
+
+main .top-text {
+    padding: 50px;
+}
+
+main .form-wrapper {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+main form {
+    display: flex;
+    flex-wrap: wrap;
+    padding-right: max(30%, 20px);
+    gap: 30px
+}
+
+.input-wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+p.logo-text {
+    font-family: 'capture_itregular', sans-serif;
+    font-size: 3rem;
+}
