--- a/styles.css
+++ b/styles.css
@@ -20,22 +20,30 @@ body {
     color: #333;
     line-height: 1.6;
     display: flex;
+    flex-wrap: wrap;
     height: 100vh;
 }
 
 aside {
-    flex: 1 1 20%;
+    flex: 1 1 30%;
+    padding-top: 50px;
     background-image: url("images/background-image.jpg");
+    background-position: center;
     background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 50px;
     color: #f4f4f4;
     padding-bottom: 1rem;
 }
 
+aside p.credit {
+    font-size: 0.7rem;
+}
+
 .logo-container {
-    margin-top: 20vh;
+    margin-top: clamp(50px, 15vw, 200px);
     background-color: rgba(0, 0, 0, 0.7);
     padding: 1rem;
     display: flex;
@@ -46,8 +54,7 @@ aside {
 }
 
 .logo-container img {
-    width: 80px;
-    height: 80px;
+    width: calc(70px + 2vw);
 }
 
 aside p.credit {
@@ -67,21 +74,77 @@ main {
 }
 
 main .top-text {
-    padding: 50px;
+    padding: 50px 20px 20px 50px;
 }
 
 main .form-wrapper {
     background-color: #fff;
-    padding: 20px;
+    padding: 50px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 main form {
+    margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
-    padding-right: max(30%, 20px);
-    gap: 30px
+    padding-right: max(20%, 20px);
+    gap: calc(20px + 1vw);
+}
+
+main form label {
+    font-size: calc(0.6rem + 0.2vw);
+    letter-spacing: 1px;
+    color: #666;
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+main form input {
+    width: 300px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 1rem;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+button.primary {
+    background: #d62828;
+    color: #fff;
+    margin-left: 50px;
+    margin-top: 20px;
+    align-self: flex-start;
+    padding: 10px 70px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    /* transition for background and size */
+    transition: background 0.3s, transform 0.3s;
+}
+
+button.primary:hover {
+    background: #b83b5e;
+}
+
+button.primary:active {
+    background: #a63c5c;
+    /* make the button smaller when clicked */
+    transform: scale(0.95);
+}
+
+main > p {
+    font-size: 1rem;
+    color: #666;
+    margin-left: 50px;
+}
+
+a.link {
+    color: #d62828;
+    font-weight: 700;
+    text-decoration: none;
 }
 
 .input-wrapper {
@@ -91,5 +154,5 @@ main form {
 
 p.logo-text {
     font-family: 'capture_itregular', sans-serif;
-    font-size: 3rem;
+    font-size: calc(3rem + 1vw);
 }
